# lab8

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  main.cpp  travis.yml  valgrind.sh
data/: data.txt
include/: JsonFormer.h  ReqProcessor.h
src/: JsonFormer.cpp  ReqProcessor.cpp
